<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutusActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bg_img"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_foreground"
                android:background="@drawable/top_gray_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bg_img"
                android:elevation="12dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bg_img">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginLeft="22dp"
                        android:text="@string/contact_us"
                        android:fontFamily="serif"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/line_view"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_below="@id/contact"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="36dp"
                        android:layout_marginRight="36dp"
                        android:background="@color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_view"
                        android:layout_marginStart="22dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:id="@+id/imgg"
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:contentDescription="TODO"
                            android:src="@drawable/baseline_call_24" />

                        <LinearLayout
                            android:id="@+id/lin_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/imgg"
                            android:layout_toRightOf="@id/imgg"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="0dp"
                                android:fontFamily="serif"
                                android:text="@string/phone_no"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/call"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="8dp"
                                android:text="+94 76 862 2203"
                                android:textColor="#0277BD"
                                android:textColorHighlight="@android:color/holo_red_dark"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/img_mob"
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_below="@id/lin_1"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/baseline_email_24" />

                        <LinearLayout
                            android:id="@+id/lin_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lin_1"
                            android:layout_marginTop="15dp"
                            android:layout_toEndOf="@id/img_mob"
                            android:layout_toRightOf="@id/img_mob"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="0dp"
                                android:fontFamily="serif"
                                android:text="@string/email_address"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/feedback"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/email"
                                android:textColor="#0277BD"
                                android:textColorHighlight="@color/black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/mail_img"
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_below="@id/lin_2"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="TODO"
                            android:src="@drawable/baseline_info_24" />

                        <LinearLayout
                            android:id="@+id/lin_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/lin_2"
                            android:layout_marginTop="15dp"
                            android:layout_toEndOf="@id/mail_img"
                            android:layout_toRightOf="@id/mail_img"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="0dp"
                                android:fontFamily="serif"
                                android:text="@string/ask_your_question"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/send_your_message"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/send_your_message"
                                android:textColor="#0277BD"
                                android:textColorHighlight="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/imgProfile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="250dp">

                                <ImageView
                                    android:id="@+id/aboutUsFacebook"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/facebook" />

                                <ImageView
                                    android:id="@+id/instagram"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginLeft="55dp"
                                    android:contentDescription="TODO"
                                    android:src="@drawable/twitter" />

                                <ImageView
                                    android:id="@+id/youtube"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginLeft="110dp"
                                    android:contentDescription="TODO"
                                    android:src="@drawable/youtube" />

                                <ImageView
                                    android:id="@+id/share"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginLeft="165dp"
                                    android:contentDescription="TODO"
                                    android:src="@drawable/google" />


                            </RelativeLayout>

                        </RelativeLayout>


                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:id="@+id/googleMapId"
                   android:layout_margin="12dp"
                    tools:context=".Activity.InStoreMapActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>